<resources>
    <string name="app_name">Baking App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank recipesFragment</string>
    <string name="media_url_mp4">http://download.blender.org/peach/bigbuckbunny_movies/BigBuckBunny_320x180.mp4</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_config_acivity_title">Select a recipe</string>
    <string name="recipes_title">Recipes</string>

</resources>
