<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_list"
        android:name="com.udacity.bakingapp.view.RecipesFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:layoutManager="LinearLayoutManager"
        tools:context=".recipes.RecipesFragment"
        tools:listitem="@layout/item_recipe" />

</android.support.v4.widget.SwipeRefreshLayout>