<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appwidget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#b0ffffff"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/appwidget_recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        tools:text="Nutella Pie" />

    <ListView
        android:id="@+id/appwidget_ingredients_listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>