...
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:text="Steps" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/step_list"
            android:name="com.udacity.bakingapp.view.RecipesFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="LinearLayoutManager"
            tools:context=".recipes.RecipesFragment"
            tools:listitem="@layout/item_recipe" />
...
